Implemented ERR:-codes; Check for singularity of V; Lmr generic function; options; Corresponds to SHA 86fb92f9 on PCMBase-master branch.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ S3method(newCppObject,BM)
 S3method(newCppObject,JOU)
 S3method(newCppObject,OU)
 S3method(newCppObject,TwoSpeedOU)
-export(Lmr.BM)
-export(Lmr.JOU)
-export(Lmr.OU)
-export(Lmr.TwoSpeedOU)
+export(Lmr.Rcpp_QuadraticPolynomialBM)
+export(Lmr.Rcpp_QuadraticPolynomialJOU)
+export(Lmr.Rcpp_QuadraticPolynomialOU)
+export(Lmr.Rcpp_QuadraticPolynomialTwoSpeedOU)
 export(newCppObject)
+importFrom(PCMBase,presentCoordinates)
 importFrom(PCMBase,validateModel)
+importFrom(abind,abind)
 useDynLib(PCMBaseCpp)
