--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Depends:
     R (>= 3.1.0),
     Rcpp,
 Imports:
-    PCMBase
+    PCMBase,
+    abind
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
     testthat,
