--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,14 +13,10 @@ License: GPL (>= 3.0)
 LazyData: true
 Depends:
     R (>= 3.1.0),
-    Rcpp,
+    Rcpp
 Imports:
-    PCMBase,
     abind
 LinkingTo: Rcpp, RcppArmadillo
-Suggests:
-    testthat,
-    microbenchmark
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
 ByteCompile: yes
