--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,18 @@
 S3method(PCMInfoCpp,BM)
 S3method(PCMInfoCpp,DOU)
 S3method(PCMInfoCpp,JOU)
-S3method(PCMInfoCpp,MRG)
+S3method(PCMInfoCpp,MixedGaussian)
 S3method(PCMInfoCpp,OU)
 S3method(PCMInfoCpp,White)
 S3method(PCMLmr,PCMInfoCpp)
+S3method(PCMParamGetFullVector,MixedGaussian)
+S3method(PCMParamGetFullVector,PCM)
 export(PCMInfoCpp)
+export(PCMParamGetFullVector)
+export(PCMTreePreorderCpp)
+importFrom(PCMBase,PCMApplyTransformation)
 importFrom(PCMBase,PCMInfo)
 importFrom(PCMBase,PCMLmr)
 importFrom(PCMBase,PCMTreeJumps)
+importFrom(PCMBase,is.Transformable)
 useDynLib(PCMBaseCpp)
