--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PCMBaseCpp
 Type: Package
 Title: A C++ backend for calculating the likelihood of phylogenetic comparative models
-Version: 0.0.1
+Version: 0.1.1
 Authors@R: c(person("Venelin", "Mitov", email = "vmitov@gmail.com",
                  role = c("aut", "cre", "cph")))
 Maintainer: Who to complain to <vmitov@gmail.com>
@@ -15,7 +15,8 @@ Depends:
     R (>= 3.1.0),
     Rcpp
 Imports:
-    abind
+    abind,
+    PCMBase
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
