--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,23 @@ S3method(PCMInfoCpp,White)
 S3method(PCMLmr,PCMInfoCpp)
 S3method(PCMParamGetFullVector,MixedGaussian)
 S3method(PCMParamGetFullVector,PCM)
+export(PCMBaseCppIsADevRelease)
 export(PCMInfoCpp)
 export(PCMParamGetFullVector)
 export(PCMTreePreorderCpp)
+import(Rcpp)
+import(methods)
 importFrom(PCMBase,PCMApplyTransformation)
 importFrom(PCMBase,PCMInfo)
 importFrom(PCMBase,PCMLmr)
+importFrom(PCMBase,PCMNumRegimes)
+importFrom(PCMBase,PCMNumTraits)
 importFrom(PCMBase,PCMTreeJumps)
+importFrom(PCMBase,PCMTreeNumNodes)
+importFrom(PCMBase,is.Global)
+importFrom(PCMBase,is.Omitted)
+importFrom(PCMBase,is.PCM)
 importFrom(PCMBase,is.Transformable)
+importFrom(abind,abind)
+importFrom(utils,packageDescription)
 useDynLib(PCMBaseCpp)
