Updated version number to 0.1.2.1. Added paramter SE (this is following commit sha 2196b2b8 of the PCMBase R-package).

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: PCMBaseCpp
 Type: Package
 Title: A C++ backend for calculating the likelihood of phylogenetic comparative models
-Version: 0.1.1.1
+Version: 0.1.2.1
 Authors@R: c(person("Venelin", "Mitov", email = "vmitov@gmail.com",
                  role = c("aut", "cre", "cph")))
-Maintainer: Who to complain to <vmitov@gmail.com>
+Maintainer: Venelin Mitov <vmitov@gmail.com>
 Description: This package can be used in combination with the PCMBase R-package
   to enable fast and parallel likelihood calculation for phylogenetic comparative
   models (PCMs). 
