fixing a build issue - function PCMTreeNumTips was not imported.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(PCMBase,PCMNumRegimes)
 importFrom(PCMBase,PCMNumTraits)
 importFrom(PCMBase,PCMTreeJumps)
 importFrom(PCMBase,PCMTreeNumNodes)
+importFrom(PCMBase,PCMTreeNumTips)
 importFrom(PCMBase,is.Global)
 importFrom(PCMBase,is.Omitted)
 importFrom(PCMBase,is.PCM)
