Implemented a MiniBenchmarkRvsCpp() function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,24 +9,31 @@ S3method(PCMInfoCpp,White)
 S3method(PCMLmr,PCMInfoCpp)
 S3method(PCMParamGetFullVector,MixedGaussian)
 S3method(PCMParamGetFullVector,PCM)
+export(MiniBenchmarkRvsCpp)
 export(PCMBaseCppIsADevRelease)
 export(PCMInfoCpp)
 export(PCMParamGetFullVector)
 export(PCMTreePreorderCpp)
 import(Rcpp)
 import(methods)
+importFrom(PCMBase,MGPMDefaultModelTypes)
 importFrom(PCMBase,PCMApplyTransformation)
 importFrom(PCMBase,PCMInfo)
+importFrom(PCMBase,PCMLik)
 importFrom(PCMBase,PCMLmr)
 importFrom(PCMBase,PCMNumRegimes)
 importFrom(PCMBase,PCMNumTraits)
+importFrom(PCMBase,PCMOptions)
 importFrom(PCMBase,PCMTreeJumps)
 importFrom(PCMBase,PCMTreeNumNodes)
 importFrom(PCMBase,PCMTreeNumTips)
+importFrom(PCMBase,PCMTreeNumUniqueRegimes)
 importFrom(PCMBase,is.Global)
 importFrom(PCMBase,is.Omitted)
 importFrom(PCMBase,is.PCM)
 importFrom(PCMBase,is.Transformable)
 importFrom(abind,abind)
+importFrom(data.table,data.table)
+importFrom(data.table,rbindlist)
 importFrom(utils,packageDescription)
 useDynLib(PCMBaseCpp)
