Up to date with PCMBase v1.2.9

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,8 +26,8 @@ importFrom(PCMBase,PCMNumTraits)
 importFrom(PCMBase,PCMOptions)
 importFrom(PCMBase,PCMTreeJumps)
 importFrom(PCMBase,PCMTreeNumNodes)
+importFrom(PCMBase,PCMTreeNumParts)
 importFrom(PCMBase,PCMTreeNumTips)
-importFrom(PCMBase,PCMTreeNumUniqueRegimes)
 importFrom(PCMBase,is.Global)
 importFrom(PCMBase,is.Omitted)
 importFrom(PCMBase,is.PCM)
