Implemented and tested 1D classes. Renamed option PCMBaseCpp.Use1DClasses to PCMBase.Use1DClasses. Implemented function BenchmarkRvsCpp for arbitrary number of traits k and PCMoptions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(PCMInfoCpp,White)
 S3method(PCMLmr,PCMInfoCpp)
 S3method(PCMParamGetFullVector,MixedGaussian)
 S3method(PCMParamGetFullVector,PCM)
+export(BenchmarkRvsCpp)
 export(MiniBenchmarkRvsCpp)
 export(PCMBaseCppIsADevRelease)
 export(PCMInfoCpp)
@@ -18,6 +19,7 @@ import(Rcpp)
 import(methods)
 importFrom(PCMBase,MGPMDefaultModelTypes)
 importFrom(PCMBase,PCMApplyTransformation)
+importFrom(PCMBase,PCMExtractDimensions)
 importFrom(PCMBase,PCMInfo)
 importFrom(PCMBase,PCMLik)
 importFrom(PCMBase,PCMLmr)
@@ -33,5 +35,7 @@ importFrom(PCMBase,is.Omitted)
 importFrom(PCMBase,is.PCM)
 importFrom(PCMBase,is.Transformable)
 importFrom(abind,abind)
+importFrom(data.table,data.table)
+importFrom(data.table,rbindlist)
 importFrom(utils,packageDescription)
 useDynLib(PCMBaseCpp)
