Added option to activate Rprof during benchmark. Performance optimizations in QuadraticPoly.h -- argument logDetVi addded to function CalculateAbCdEf.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,8 @@ importFrom(PCMBase,is.Omitted)
 importFrom(PCMBase,is.PCM)
 importFrom(PCMBase,is.Transformable)
 importFrom(abind,abind)
-importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
+importFrom(stats,logLik)
+importFrom(utils,Rprof)
 importFrom(utils,packageDescription)
 useDynLib(PCMBaseCpp)
