--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,8 @@
-pandoc: 1.19.2.1
-pkgdown: 1.1.0.9000
-pkgdown_sha: 36bedb20e8d68ee91d33834c76f0e3dd03d5086a
-articles: []
+pandoc: 2.3.1
+pkgdown: 1.3.0
+pkgdown_sha: ~
+articles: {}
+urls:
+  reference: http://venelin.github.io/PCMBaseCpp/reference
+  article: http://venelin.github.io/PCMBaseCpp/articles
 
