--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: PCMBaseCpp
 Type: Package
-Title: A C++ Implementation of Parallel Likelihood Calculation for Phylogenetic Comparative Models
+Title: Fast Likelihood Calculation for Phylogenetic Comparative Models
 Version: 0.1.5
 Authors@R: c(person("Venelin", "Mitov", email = "vmitov@gmail.com",
                  role = c("aut", "cre", "cph")))
 Maintainer: Venelin Mitov <vmitov@gmail.com>
 Description: Provides a C++ backend for multivariate phylogenetic comparative
   models implemented in the R-package 'PCMBase'. Can be used in combination
-  with 'PCMBase' to enable fast and parallel likelihood calculation. 
+  with 'PCMBase' to enable fast and parallel likelihood calculation. Implements
+  the pruning likelihood calculation algorithm described in Mitov et al. (2018) 
+  <arXiv:1809.09014>. Uses the SPLITT C++ library for parallel tree traversal 
+  described in Mitov and Stadler (2018) <doi:10.1111/2041-210X.13136>.
 Encoding: UTF-8
 License: GPL (>= 3.0)
 LazyData: true
