--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Provides a C++ backend for multivariate phylogenetic comparative
   models implemented in the R-package 'PCMBase'. Can be used in combination
   with 'PCMBase' to enable fast and parallel likelihood calculation. Implements
   the pruning likelihood calculation algorithm described in Mitov et al. (2018) 
-  <arXiv:1809.09014>. Uses the SPLITT C++ library for parallel tree traversal 
+  <arXiv:1809.09014>. Uses the 'SPLITT' C++ library for parallel tree traversal 
   described in Mitov and Stadler (2018) <doi:10.1111/2041-210X.13136>.
 Encoding: UTF-8
 License: GPL (>= 3.0)
