--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PCMBaseCpp
 Type: Package
 Title: Fast Likelihood Calculation for Phylogenetic Comparative Models
-Version: 0.1.10
+Version: 0.1.11
 Authors@R: c(person("Venelin", "Mitov", email = "vmitov@gmail.com",
                  comment = '<a href="https://venelin.github.io">venelin.github.io</a>',
                  role = c("aut", "cre", "cph")))
@@ -9,8 +9,8 @@ Maintainer: Venelin Mitov <vmitov@gmail.com>
 Description: Provides a C++ backend for multivariate phylogenetic comparative
   models implemented in the R-package 'PCMBase'. Can be used in combination
   with 'PCMBase' to enable fast and parallel likelihood calculation. Implements
-  the pruning likelihood calculation algorithm described in Mitov et al. (2018) 
-  <arXiv:1809.09014>. Uses the 'SPLITT' C++ library for parallel tree traversal 
+  the pruning likelihood calculation algorithm described in Mitov et al. (2020) 
+  <doi:10.1016/j.tpb.2019.11.005>. Uses the 'SPLITT' C++ library for parallel tree traversal 
   described in Mitov and Stadler (2018) <doi:10.1111/2041-210X.13136>.
 Encoding: UTF-8
 License: GPL (>= 3.0)
