Adding test-EB.R and updating EB.R, DESCRIPTION and NAMESPACE.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(PCMBase,is.PCM)
 importFrom(PCMBase,is.Transformable)
 importFrom(abind,abind)
 importFrom(data.table,rbindlist)
+importFrom(phytools,nodeHeights)
 importFrom(stats,logLik)
 importFrom(utils,Rprof)
 useDynLib(PCMBaseCppCustom)
